deployment/minikube/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: gptsvc-pod
  labels:
    app: gptsvc
spec:
  containers:
  - name: gptsvc-c
    image: gptsvc:v1 # gptsvc image
    ports:
    - containerPort: 8000
    resources:
      requests:
        memory: "128Mi"
        cpu: "100m"
      limits:
        memory: "256Mi"
        cpu: "200m"
