deployment/minikube/service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gptsvc-service
spec:
  selector:
    app: gptsvc
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP
