deployment/minikube/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gptsvc-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /gptsvc(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: gptsvc-service
            port:
              number: 80
